# serp-ai

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/scripts/: ingest.py  parser.py
backend/app/services/: services.py
backend/app/tools/: bibtex_parser.py  ingest.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: search-landing.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/results/: page.tsx
frontend/src/components/ui/: badge.tsx
